build/hadra-build-tool/src/test/resources/net/hl/test/compiler/success/testCompilerSuccess0015.hl
package net.thevpc.hlexamples;
int z;
fun main(String[] args){
    int z;
    println("hello world");
    int a=z;
}