build/hadra-build-tool/src/test/resources/net/hl/test/compiler/fail/testCompilerFail0017.hl
package net.thevpc.hlexamples;
fun main(String[] args,String[] args,int z){
    println("hello world");
    int a=z;
    int z;
}